# GMS

./: .gitignore  README.md  pyproject.toml  quick_test.py  requirements.txt  test_model.json  test_project.py  test_simple.py  train_and_evaluate.py  train_final.py  测试报告.md  训练评估报告.md
.trae/specs/implement-gaussian-mixture-solver/: checklist.md  spec.md  tasks.md
checkpoints/: checkpoint_epoch_1.pt  checkpoint_epoch_2.pt  checkpoint_epoch_3.pt
configs/: default_config.yaml  model_config.yaml
src/gms/: __init__.py
src/gms/diffusion_integration/: __init__.py  adapter.py  backward_process.py  checkpoint.py  condition_injection.py  distributed.py  forward_process.py  inference.py  trainer.py
src/gms/evaluation/: __init__.py  data_transforms.py  dataset_utils.py  evaluation_script.py  report_generator.py
src/gms/evaluation/datasets/: __init__.py  cifar10.py  custom_dataset.py
src/gms/evaluation/metrics/: __init__.py  fid_score.py  is_score.py  precision_recall.py
src/gms/gmm_optimization/: __init__.py  gmm_parameters.py  initialization.py  loss_functions.py  monitoring.py  optimizer_base.py  probability_density.py  regularization.py  schedulers.py  serialization.py
src/gms/moment_estimation/: __init__.py  backbone_networks.py  base_feature_extractor.py  feature_cache.py  mean_head.py  moment_heads.py  preprocessing.py  skewness_head.py  variance_head.py
src/gms/sampling/: __init__.py  batch_sampler.py  checkpoint_manager.py  component_selector.py  gaussian_sampler.py  progress_monitor.py  reproducibility.py  sampling_scheduler.py  sampling_validator.py  time_step_controller.py
src/gms/utils/: __init__.py
tests/: __init__.py  conftest.py  test_backbone.py  test_datasets.py  test_diffusion_integration.py  test_evaluation_metrics.py  test_gmm_model.py  test_gmm_optimizer.py  test_gmm_sampler.py  test_output_heads.py  test_sampling_controller.py  test_training_inference.py
